--- a/src/index.scss
+++ b/src/index.scss
@@ -24,8 +24,9 @@ body {
 
 h1 {
     text-align: center;
+    padding-top: 1rem;
     margin-bottom: 1rem;
-    color: orange;
+    color: violet;
 }
 
 .weather-block {
